[package]
name = "ws-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }

tungstenite = "*"
tokio-tungstenite = "*"
serde = "*"
serde_json = "*"
futures = "*"